Cleaned some more stuff up.